fix spacing on survey page

--- a/src/components/Body/SurveyPage/SurveyPlaylist/styles.css
+++ b/src/components/Body/SurveyPage/SurveyPlaylist/styles.css
@@ -1,5 +1,4 @@
 .playlistContainer {
-  width: 80%;
   height: 500px;
   overflow: auto;
 }
